[package]
name = "solver"
version = "0.37.0"

# Includes code from rustwasm/wasm-pack-template, rustwasm/create-wasm-app,
# and parrotmac/rust-wasm-hello-world, which are licensed under the Apache-2.0
# or MIT. parrotmac/rust-wasm-hello-world also lists the ISC license for the
# www folder.
authors = ["icecream17 <icecream17.github@gmail.com>"]
edition = "2024"
repository = "https://github.com/icecream17/solver"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
